--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
-/_build
-/cover
-/deps
-/doc
+/app/_build
+/app/cover
+/app/deps
+/app/doc
 /.fetch
 erl_crash.dump
 *.ez
 *.beam
-/config/*.secret.exs
-.elixir_ls/
+/appconfig/*.secret.exs
+/app/.elixir_ls/
+/data/prometheus-data
+/data/tempo-data
+/data/loki-data
